fixed footer on mobile/tablet

--- a/css/style.css
+++ b/css/style.css
@@ -822,6 +822,12 @@ input {
   position: relative;
 }
 
+@media only screen and (min-width: 768px) {
+  .row-container {
+    display: inline-flex;
+  }
+}
+
 .brand-logo-footer {
   font-family: var(--secondary-font);
   font-weight: var(--weight-bold);
@@ -887,7 +893,7 @@ input {
 
 @media only screen and (min-width: 768px) {
   .footer-logo-text {
-    margin-right: 120px;
+    margin-right: 24px;
   }
 }
 
@@ -926,17 +932,20 @@ input {
   background-color: rgba(var(--success-green));
 }
 
+.page-footer .social-media-container {
+  margin-top: 72px;
+}
+
 @media only screen and (min-width: 768px) {
   .page-footer .social-media-container {
-    position: absolute;
-    right: 164px;
+    margin-top: 0;
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .page-footer .social-media-container {
-    position: static;
     justify-content: flex-start;
+    margin-top: 0;
   }
 }
 
@@ -956,6 +965,8 @@ input {
   display: flex;
   gap: 24px;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @media only screen and (min-width: 768px) {
